overview: End window drag for fling event.

For fling event, we also should do proper drag ending if splitview mode is
active at the moment. Otherwise, the splitview divider bar won't be able to
place on top properly.

Bug: 885261
Change-Id: I992c2502090c2f4d6fd9e4f0401ca172f9041823
Reviewed-on: https://chromium-review.googlesource.com/1231893
Reviewed-by: Min Chen <minch@chromium.org>
Commit-Queue: Xiaoqian Dai <xdai@chromium.org>
Cr-Commit-Position: refs/heads/master@{#592213}
Former-commit-id: f217e8a7ac45391967e3dee367d1a730a5a79f47